test_suite/alan-2022-examples/failing/007610_mutation.alan
source jz begin to J := 8693 end
